--- a/.gitignore
+++ b/.gitignore
@@ -51,6 +51,8 @@ captures/
 .idea/modules.xml
 # Comment next line if keeping position of elements in Navigation Editor is relevant for you
 .idea/navEditor.xml
+# Completely ignore IDE files
+.idea
 
 # Keystore files
 # Uncomment the following lines if you do not want to check your keystore files in.
