--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -24,4 +24,5 @@ android {
 dependencies {
     implementation project(':FtcRobotController')
     annotationProcessor files('lib/OpModeAnnotationProcessor.jar')
+    implementation 'com.acmerobotics.roadrunner:core:0.5.5'
 }
