--- a/build.dependencies.gradle
+++ b/build.dependencies.gradle
@@ -5,6 +5,9 @@ repositories {
     flatDir {
         dirs rootProject.file('libs')
     }
+    maven {
+        url = 'https://maven.brott.dev/'
+    }
 }
 
 dependencies {
@@ -20,4 +23,3 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'org.firstinspires.ftc:gameAssets-FreightFrenzy:1.0.0'
 }
-
