--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -25,4 +25,5 @@ dependencies {
     implementation project(':FtcRobotController')
     annotationProcessor files('lib/OpModeAnnotationProcessor.jar')
     implementation 'com.acmerobotics.roadrunner:core:0.5.5'
+    implementation 'com.acmerobotics.dashboard:dashboard:0.4.4'
 }
